# Shingle

./: README.md  pyproject.toml  requirements.txt
data/: test.csv  test.txt  test_file 16up.CSN
data/folder/: test_file1.CSN
scripts/: runme.py
shingle/: __init__.py  cli.py  shingle.py
tests/: test_shingle.py
