[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "shingle"
version = "0.0.1"
requires-python = ">=3.12.2"
description = "Prepares Print files to be shingled"
readme = "README.md"
license = { file = "LICENSE" }

[project.scripts]
process-file = "shingle.cli:process_file"
process-folder = "shingle.cli:process_folder"

[tool.setuptools]
packages = ["shingle"]
